fix the scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ main{
 SCROLLBAR
 =============================================*/
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 15px;
   height: 10px;
 }
 
